# afrl

./: .gitignore  README.md  analysis.py  debug.py  dynamics.py  file_system.py  info.py  info.yaml  mlp.py  plot_results.ipynb  pyproject.toml  relative_improvement.py  requirements.txt  simple.ipynb  smart_cache.py  test_afrl.py  theory.ipynb  tools.py  train_afrl.py  train_afrl_pp.py  train_agent.py  train_dynamics.py  train_pp.py  train_predpolicy.py  trend_test.py
commands/: start
commands/project/: run_all  run_all_baselines  run_ant  run_cheetah  run_many  run_many_ant_bullet  run_many_cheetah  watch_all
documentation/: old_paper_format.tex  paper.tex  ref.bib  setup.md
logs/: final_1  final_1.logs
main/: agent.py  analysis.py  coach.py  graphics.py  main.py  original_plot_data.txt  smart_cache.py  test_prediction.py  tools.py
main/agents/: predictive_agent.py
main/optimizer/: sam.py
main/run/: compare_agents.py  compare_methods.py  compare_tuner.py  full.py  test_visuals.py  visuals.py
main/scratchwork/: original_plot_data.py  original_plots.py  plot_final.py  visual_agents.py
main/scripts/: generate_training_graphs.py
main/testing/: analysis.py  test_predictive.py
main/training/: train_agent.py  train_coach.py  train_dynamics.py  train_predictive.py
results/False/: charts.html  simple_data.json
results/False/serial_data/: discounted_rewards_per_episode_per_timestep.pickle  failure_points_per_episode_per_timestep.pickle  q_value_gaps_per_episode_per_timestep.pickle  recorder.pickle  settings.pickle  (+3 more)
settings/during_start/: 005_000__setup_ld_path__.sh
subrepos/pybullet/: .gitrepo
subrepos/rl-trained-agents/: .gitrepo
(+1303 files in other folders)
