[tool.poetry]
name = "fornix"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
pip = "20.1.1"
quik-config = "^1.2.0"
notebook = "^6.4.8"
PyVirtualDisplay = "^3.0"
trivial-torch-tools = "0.3.0"
slick-siphon = "^0.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
