[tool.poetry]
name = "fornix"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
quik-config = "1.6.0"
PyVirtualDisplay = "^3.0"
slick-siphon = "^0.1.1"
notebook = "^6.4.8"
jupyterthemes = "0.20.0"
file-system-py = "^0.0.7"
simple-namespace = "^1.0.0"
rigorous-recorder = "1.1.0"
silver-spectacle = "^0.7.1"
super-hash = "^1.1.0"
trivial-torch-tools = "^0.5.1"
scipy = "^1.8.0"
cool-cache = "^0.0.2"
super-map = "1.2.2"
sb3-contrib = "^1.5.0"
# gym = {version = "0.21", extras = ["atari"]}
json-fix = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
